# devpi-client-extensions

./: .appveyor.yml  .gitignore  .pre-commit-config.yaml  .pyre_configuration  .travis.yml  Pipfile  README.md  README.rst  appveyor.yml  mypy.ini  pyproject.toml  pytype.cfg  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: ci.yml  tests.yml
_typeshed/: importlib_metadata.pyi  keyring.pyi  pyproject.toml
_typeshed/devpi/: __init__.pyi  main.pyi
_typeshed/pluggy/: __init__.pyi  _hooks.pyi  hooks.pyi
devpi_ext/: __init__.py  login.py
doc/: conf.py  index.rst
src/devpi_ext/: __init__.py  __init__.pyi  login.py  login.pyi  py.typed
tests/: conftest.py  test_hook_registration.py  test_keyring_password_hook.py  test_password_hook.py  test_pypirc_password_hook.py  test_readme.py  test_version.py
travis/: setversion.py
