[tool.poetry]
name = 'devpi-client-extensions'
version = '0.3.1'
description = 'devpi client extensions'
authors = ['Oleg Höfling <oleg.hoefling@gmail.com>']
license = 'MIT'
readme = 'README.rst'
homepage = 'https://github.com/hoefling/devpi-client-extensions'
repository = 'https://github.com/hoefling/devpi-client-extensions'
classifiers = [
    'Development Status :: 3 - Alpha',
    'Environment :: Web Environment',
    'Intended Audience :: Developers',
    'Intended Audience :: System Administrators',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: Implementation',
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
]
packages = [
    { include = 'devpi_ext', from = 'src' },
]

[tool.poetry.plugins.'devpi_client']
'devpi-client-ext-login-pypirc' = 'devpi_ext.login:_pypirc_plugin'
'devpi-client-ext-login-keyring' = 'devpi_ext.login:_keyring_plugin [keyring]'

[tool.poetry.dependencies]
python = '^3.7'
devpi-client = '>=3.0.0'
keyring = { version = '*', optional = true }
importlib-metadata = { version = '^4.0.0', python = '<3.8' }

[tool.poetry.extras]
keyring = ['keyring']

[tool.poetry.dev-dependencies]
pytest = '7.1.3'
pytest-cov = '3.0.0'
readme-renderer = '37.2'
taskipy = '1.10.3'
pre-commit = { version = '2.20.0', python = '>=3.6.1' }
setuptools-scm = '7.0.5'

[tool.taskipy.tasks]
setup = 'poetry install && pre-commit install'
test = 'pytest --cov=devpi_ext --cov-branch --cov-report=term-missing --cov-fail-under=100 --doctest-modules'
lint = 'pre-commit run --all-files'
scm = 'python -c "import setuptools_scm; print(setuptools_scm.get_version())"'
release = 'python release.py'

[tool.black]
skip-string-normalization = true
target_version = ['py38']

[tool.isort]
profile = 'black'

[tool.mypy]
files = ['src']
mypy_path = ['_typeshed/']
ignore_missing_imports = false
warn_unused_configs = true
disallow_subclassing_any = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
disallow_any_unimported = true
strict_optional = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
warn_no_return = true
no_implicit_reexport = true
show_error_codes = true

[build-system]
requires = ['poetry-core>=1.0']
build-backend = 'poetry.core.masonry.api'
